# Progetto_LaboratorioV2_0

./: Activities.cpp  Activities.h  CMakeLists.txt  MyApp.cpp  MyApp.h  MyFrame.cpp  MyFrame.h  Register.cpp  Register.h
test/: ActivitiesTest.cpp  CMakeLists.txt  RegisterLists.cpp  runAllTests.cpp  runAllTests.h
